src/index.css
/* Variables */
:root {
  --background-color: #FFFFFF;
  --button-text-color: #F0F0F2;
  --navbar-background-color: #D9D7C5;
  --navbar-text-color: #7c797b;
  --primary-highlight-color: #73241D;
  --secondary-highlight-color: #BF3C30;
  --text-color-primary: #231F20;
}

/* Typefaces */
@font-face {
  font-family: 'JetBrainsMono-Light';
  src: local('JetBrainsMono-Light'), url('./fonts/JetBrainsMono-Light.woff') format('woff');
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'PP Agrandir Text';
  src: local('PP Agrandir Text'), url('./fonts/PPAgrandirText-Bold.woff') format('woff');
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

/* Body */
body {
  color: var(--text-color-primary);
  font-family: 'JetBrainsMono-Light';
  margin: 0;
}

/* Site Header/Logo */
.siteLogoContainer {
  align-items: center;
  display: flex;
  height: 50px;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1000;
 }

 .siteLogo {
  margin-top: 0.75rem;
 }

 .siteLogo:hover {
  cursor: pointer;
 }

/* Navbar */
.navbarContainer {
  align-items: center;
  background-color: var(--navbar-background-color);
  bottom: 0;
  display: flex;
  height: 95px;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  z-index: 1000;
}

.navbarNav {
  margin-top: 0.75rem;
  overflow-y: hidden;
  width: 100%;
}

.navbarListItemsContainer {
  align-items: center;
  display: flex;
  font-family: 'PP Agrandir Text';
  font-size: 16px;
  justify-content: space-evenly;
  margin: 0;
  padding: 0;
}

.navbarListItem {
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-direction: column;
}

.navbarListItemName {
  margin-top: 0.25rem;
  color: var(--navbar-text-color);
}

.navbarListItemNameActive {
  margin-top: 0.25rem;
  color: var(--text-color-primary);
}

/* Page Containers & "Main" Div */
.explore,
.listingDetails,
.pageContainer,
.profileContainer {
  margin: 1rem;
}
@media (min-width: 1024px) {
  .explore,
  .listingDetails,
  .pageContainer,
  .profileContainer {
    margin: 3rem;
  }
}

.pageHeader {
  font-size: 2rem;
  font-weight: 800;
  text-align: center;
}

.pageParagraph {
  display: inline-flex;
  font-size: 14px;
  margin-bottom: 3rem;
}

.mainDivPageContent {
  text-align: center;
  margin-top: 4rem;
  width: 100%;
}

/* Profile */
.profileDetailsHeader {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.profileDetailsText {
  font-weight: 600;
}

.profileCard {
  align-items: center;
  border-radius: 1rem;
  box-shadow: rgba(0, 0, 0, 0.2);
  display: inline-flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.logOutBar {
  align-items: center;
  display: flex;
  justify-content: center;
  position: relative;
}

.logOutButton {
  align-items: center;
  background-color: var(--primary-highlight-color);
  border: none;
  border-radius: 20px;
  color: var(--button-text-color);
  cursor: pointer;
  display: flex;
  font-size: 20px;
  font-family: 'JetBrainsMono-Light';
  justify-content: center;
  margin-bottom: -1rem;
  padding: 0.5rem;
  width: 10rem;
}

/* Search Filter Dropdowns */
.dropdownContainer {
  align-items: center;  
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.searchFilterDropdown {
  appearance: none;
  background-image: url('./assets/svg/dropdownArrowReplacement.svg');
  background-position: right 0em top 50%;
  background-repeat: no-repeat, repeat;
  background-size: 1.4em;
  border: transparent;
  color: var(--text-color-primary);
  font-size: 20px;
  font-family: 'JetBrainsMono-Light';
  height: 2.5em;
  margin: 0;
}
.searchFilterDropdown::-ms-expand {
  display: none;
}
.searchFilterDropdown:hover {
  cursor: pointer;
}
.searchFilterDropdown:focus {
  border-color: transparent;
  outline: none;
}
.searchFilterDropdown option {
  background-color: var(--text-color-primary);
  color: var(--button-text-color);
}

/* Result Stats & Ordering */
.resultsOrderAndLength {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100%;
  margin-bottom: 0;
  padding-bottom: 0;
}

.orderDropdownContainer {
  margin-right: 2rem;
  margin-top: 3rem;
}

.resultsOrderDropdown {
  appearance: none;
  background-image: url('./assets/svg/dropdownArrowReplacement.svg');
  background-position: right 0em top 50%;
  background-repeat: no-repeat, repeat;
  background-size: 1.4em;
  border: transparent;
  color: var(--text-color-primary);
  font-size: 20px;
  font-family: 'JetBrainsMono-Light';
  height: 2.5em;
  margin: 0;
  width: 16rem;
}

.resultsOrderDropdown::-ms-expand {
  display: none;
}
.resultsOrderDropdown:hover {
  cursor: pointer;
}
.resultsOrderDropdown:focus {
  border-color: transparent;
  outline: none;
}
.resultsOrderDropdown option {
  background-color: var(--text-color-primary);
  color: var(--button-text-color);
}

.resultStats {
  margin-left: 2rem;
  margin-top: 3rem;
}

.resultStatsText {
  font-size: 20px;
}

/* About */
.mainDivAboutContent {
  width: 100%;
}
@media (min-width: 1024px) {
  .mainDivAboutContent {
    margin: 0 auto;
    width: 50%;
  }
}

.aboutPageContent {
  text-align: justify;
}

.aboutPageContent a {
  color: var(--text-color-primary)
}

.tmdbLogoIcon {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2rem;
  width: 95vw;
}
@media (min-width: 1024px) {
  .tmdbLogoIcon {
    width: 30vw;
  }
}

/* Input Divs */
.emailInput,
.input,
.passwordInput,
.textarea,
.usernameInput {
  background: var(--background-color);
  border: 1.6px var(--text-color-primary);
  border-style: hidden hidden solid hidden;
  font-family: 'JetBrainsMono-Light';
  font-size: 14px;
  height: 2rem;
  margin-left: 2rem;
  padding-right: 8rem;
}

.passwordInputDiv {
  position: relative;
}

.showPasswordIcon {
  cursor: pointer;
  margin-left: -2.5rem;
  margin-top: -0.2rem;
  padding: 1rem;
  position: absolute;
}

.oAuthCallToAction {
  padding-top: 3rem;
}

.googleLogin {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.googleIconDiv {
  align-items: center;
  background-color: var(--background-color);
  border: none;
  border-radius: 50%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
  cursor: pointer;
  display: flex;
  height: 4rem;
  justify-content: center;
  margin: 1.5rem;
  padding: 0.75rem;
  width: 4rem;
}

.googleIconImg {
  width: 100%;
}

/* Log In/Sign Up/Forgot Password Links */
.changePasswordLink,
.forgotPasswordLink, 
.logInLink,
.signUpLink {
  color: var(--text-color-primary);
  cursor: pointer;
  font-size: 12px;
}

.changePasswordTextDiv,
.forgotPasswordTextDiv, 
.signUpTextDiv {
  margin-bottom: 1.5rem;
}

.changePasswordTextDiv,
.changePasswordLink {
  margin-top: 3.5rem;
  font-size: 16px;
}

.passwordResetLink {
  color: var(--text-color-primary);
  cursor: pointer;
  font-size: 16px;
  margin-top: 3.5rem;
  text-decoration: underline;
}

.resetLinkButton {
  background: none;
  border: none;
  color: inherit;
  cursor: pointer;
  font: inherit;
  outline: inherit;
  padding: 0;
  text-decoration: inherit;
}

.backToSignUpLink {
  text-decoration: none;
}

.homepageLink,
.profileLink {
  color: var(--button-text-color);
  cursor: pointer;
  text-decoration: none;
}

/* Buttons */
.homepageBar,
.logInBar,
.profileBar,
.signUpBar {
  align-items: center;
  bottom: 0;
  display: flex;
  justify-content: center;
  left: 0; 
  margin-bottom: 8rem;
  position: absolute;
  right: 0;
}

.searchBar {
  align-items: center;
  display: flex;
  justify-content: center;
  left: 0; 
  margin-bottom: 8rem;
  position: absolute;
  right: 0;
}

.changePasswordBar {
  align-items: center;
  display: flex;
  justify-content: center;
  left: 0; 
  margin-bottom: 8rem;
  position: absolute;
  right: 0;
}

.changePasswordButton,
.homepageButton,
.logInText,
.logInButton,
.profileButton,
.searchButton,
.signUpButton,
.signUpText {
  cursor: pointer;
}

.logInText,
.signUpText {
  font-size: 1.5rem;
  font-weight: 700;
}

.filterButton,
.homepageButton,
.logInButton,
.profileButton,
.searchButton,
.signUpButton {
  align-items: center;
  background-color: var(--primary-highlight-color);
  border: none;
  border-radius: 20px;
  color: var(--button-text-color);
  display: flex;
  font-size: 20px;
  font-family: 'JetBrainsMono-Light';
  justify-content: center;
  padding: 0.5rem;
  width: 10rem;
}

.filterButton {
  font-size: 10px;
}

.changePasswordButton {
  align-items: center;
  background-color: var(--primary-highlight-color);
  border: none;
  border-radius: 20px;
  color: var(--button-text-color);
  display: flex;
  font-size: 20px;
  font-family: 'JetBrainsMono-Light';
  justify-content: center;
  margin-top: 3rem;
  padding: 0.5rem;
  width: 15rem;
}

/* Explore Page */
.mainDivExploreContent {
  width: 100%;
}
@media (min-width: 1024px) {
  .mainDivExploreContent {
    margin: 0 auto;
    width: 50%;
  }
}

/* Search Result */
.searchResultsContainer { 
  margin-bottom: 10rem;
  margin-top: 0.5rem;
}

.mainResult {
  margin-bottom: 3rem;
}

.searchResultContainer {
  background-color: var(--primary-highlight-color);
  border-radius: 16px;
  display: grid;
  grid-template-areas:
    "poster title title title"
    ". date date date"
    ". rating rating hearticon";
  grid-template-columns: [first] 1fr [second] 1fr [third] 1fr [fourth] 1fr [end];
  grid-template-rows: [row1-start] 62.5px [row2-start] 25px [row3-start] 62.5px [end];
  justify-content: stretch;
  margin-bottom: -1rem;
  padding-bottom: 2em;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 2em;
}

.searchResultPosterContainer {
  margin-bottom: 0;
}

.searchResultPoster {
  align-self: center;
  height: 150px;
  margin-right: 1em;  
  width: 100px;
}

.searchResultTitleLink {
  align-self: start;
  grid-area: title;
  text-transform: uppercase;
}

.searchResultLink {
  color: var(--button-text-color)
}

.heartIcon {
  align-self: end;
  grid-area: hearticon;
  height: 1.5em;
  justify-self: end;
  margin-left: 3em;
  margin-bottom: 0;
  padding-left: 1em;
}

.heartIcon:hover {
  cursor: pointer;
}

.searchResultReleaseDate {
  align-self: start;
  color: var(--button-text-color);
  grid-area: date;
  margin-bottom: 0;
}

.searchResultVoteAverage {
  align-self: end;
  color: var(--button-text-color);
  grid-area: rating;
  margin-bottom: 0;
}

.noResultsTextContainer {
  align-items: center;
  display: flex;
  justify-content: center;
}

/* Loading Spinner */
.loadingSpinnerContainer {
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
  bottom: 0;
  display: flex;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 5000;
}

.loadingSpinner {
  animation: spin 1.4s linear infinite;
  border: 8px solid;
  border-color: var(--primary-highlight-color) transparent var(--primary-highlight-color) transparent;
  border-radius: 50%;
  height: 64px;
  width: 64px;
}
@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

